--- a/lab06/package.json
+++ b/lab06/package.json
@@ -18,7 +18,8 @@
     "@react-navigation/native": "^6.1.18",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "2.8.3",
-    "react-native-safe-area-context": "4.10.5"
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-vector-icons": "10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
