--- a/lab06/package.json
+++ b/lab06/package.json
@@ -15,11 +15,15 @@
     "expo-linear-gradient": "~13.0.2",
     "react-native-screens": "3.31.1",
     "@react-navigation/stack": "^ 6.4.1",
+    "@expo-google-fonts/inter": "0.2.3",
+    "@expo-google-fonts/vt323": "0.2.3",
     "@react-navigation/native": "^6.1.18",
+    "react-native-vector-icons": "10.2.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "2.8.3",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-vector-icons": "10.2.0"
+    "expo-app-loading": "2.1.1",
+    "@expo-google-fonts/ubuntu": "0.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
