--- a/lab06/package.json
+++ b/lab06/package.json
@@ -11,6 +11,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "expo-app-loading": "2.1.1",
     "react-native-svg": "15.2.0",
     "expo-linear-gradient": "~13.0.2",
     "react-native-screens": "3.31.1",
@@ -18,12 +19,12 @@
     "@expo-google-fonts/inter": "0.2.3",
     "@expo-google-fonts/vt323": "0.2.3",
     "@react-navigation/native": "^6.1.18",
+    "@expo-google-fonts/ubuntu": "0.2.3",
     "react-native-vector-icons": "10.2.0",
+    "@expo-google-fonts/voltaire": "0.2.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "2.8.3",
-    "react-native-safe-area-context": "4.10.5",
-    "expo-app-loading": "2.1.1",
-    "@expo-google-fonts/ubuntu": "0.2.3"
+    "react-native-safe-area-context": "4.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
